# texsmith-exam

./: .gitignore  404.html  DEVEL.md  Makefile  README.md  REFACTORING.md  exam.md  index.html  pyproject.toml  versions.json
.github/workflows/: ci.yml  release.yml
css/: brand.css
demo/: 4-drawing.md  config.yml
demo/exam/: 1-multiple-choices.md  2-short.md  3-essay.md  5-fill-in-the-blanks.md  Makefile
demo/exam/assets/: relationship.drawio
demo/pset/: Makefile  config.yml  pset.md
demo/quiz/: Makefile  quiz.md
docs/: .nav.yml  configuration.md  index.md  syntax.md
latest/: 404.html  index.html
latest/configuration/: index.html
latest/syntax/: index.html
quiz/: quiz.md
search/: search_index.json
src/texsmith_template_exam/: __init__.py  exam_renderer.py  markdown.py  solution_md.py
src/texsmith_template_exam/columen/: columen.sty
src/texsmith_template_exam/exam/: __init__.py  checkboxes.py  fenced_code.py  fillin.py  headings.py  mode.py  solutions.py  styles.py  texsmith_compat.py  utils.py  version.py
src/texsmith_template_exam/exam/template/: heiglogo.sty  manifest.toml  template.tex
syntax/: index.html
te/poo/2020/: 1-qcm.md  2-short.md  3-syntax.md  4-program.md  config.yml  main.cpp  simulator.cpp  simulator.hpp
templates/exam/template/: manifest.toml  template.tex
tests/: test_exam_fillin.py  test_exam_headings.py  test_exam_mode.py  test_exam_renderer.py  test_exam_styles.py  test_markdown.py  test_solution_md.py  test_template_tex.py
texsmith_exam/src/texsmith_exam/: __init__.py  exam_renderer.py  solution_md.py
v0.2.2/: 404.html
v0.2.3/: index.html  objects.inv
v0.2.3/assets/: drawio-viewer.js
v0.2.3/configuration/: index.html
v0.2.3/css/: extra.css
v0.2.3/js/: mathjax.js
v0.2.3/search/: search_index.json
v0.2.3/syntax/: index.html
