[project]
name = "ts-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "texsmith>=0.2.1",
    "texsmith-exam",
]

[tool.uv.sources]
texsmith = { git = "https://github.com/yves-chevallier/texsmith.git" }
texsmith-exam = { path = "texsmith_exam" }
