[project]
name = "texsmith-exam"
dynamic = ["version"]
description = "TeXSmith exam template."
requires-python = ">=3.13"
dependencies = [
    "texsmith>=0.2.1,<1.0",
]

[tool.uv.sources]
texsmith = { git = "https://github.com/yves-chevallier/texsmith.git" }

[project.entry-points."texsmith.templates"]
exam = "texsmith_template_exam:template"

[project.entry-points."texsmith.renderers"]
exam = "texsmith_template_exam.exam_renderer:register"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "pytest>=8.0",
    "texsmith",
]
docs = [
    "mkdocs>=1.6.1",
    "mike>=2.1.2",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-drawio @ git+https://github.com/yves-chevallier/mkdocs-drawio.git@testounet",
    "mkdocs-material>=9.6.22",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings[python]>=0.21.2",
    "mkdocs-pills>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/texsmith_template_exam"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "mkdocs_latex",
  ".venv",
  "venv",
  "build",
  "sandbox",
  "templates",
  "examples",
  "experiments",
  "dist",
  "site",
  "docs/_build",
  "**/migrations",
]

fix = true
unsafe-fixes = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
  "E","F","I","B","UP",
  "C90","N","D","ANN","C4","SIM","PTH","T20","ERA","ARG","G","TRY","DTZ","SLF","PT","RUF","A",
]
ignore = [
  "E501",  # line too long (handled by line-length)
  "F403",  # 'from module import *' used; unable to detect undefined names
  "D107",  # missing docstring in __init__
  "D202",  # No blank lines after function docstring
  "D203",  # 1 blank line required before class docstring
  "D212",  # Multi-line docstring summary should start at the first line
  "D214",  # Multi-line docstring summary should start and end on triple quotes
  "D100",  # missing docstring in public module
  "D101",  # missing docstring in public class
  "D102",  # missing docstring in public method
  "D103",  # missing docstring in public function
  "D104",  # missing docstring in public package
  "D105",  # missing docstring in magic method
  "D200",  # One-line docstring should fit on one line
  "D205",  # Blank line required between summary line and description
  "D301",  # Use raw string or escape the backslash
  "D415",  # First line of docstring should end with punctuation
  "ANN201",  # Missing return type annotation for public function
  "ARG002",  # Unused argument
  "B008",   # Function call in default argument (Typer pattern)
  "S101",    # Use of assert detected
  "TRY003",  # Catching too general exception Exception
  "ANN401",  # Missing type annotation for function argument
  "C901",  # Function is too complex
  "UP017",  # Date time issue with py310
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["texsmith_template_exam"]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D", "T20", "S101", "ANN", "ARG002", "SLF001", "PT018", "ARG001", "TRY003"]
